--- a/index.html
+++ b/index.html
@@ -472,54 +472,86 @@ body {
       </ul>
     </nav>
   </header>
+ 
   <section id="about-me-features" class="about-section">
+    <!-- Profile Section -->
     <div class="profile-container">
         <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
         <h2 class="typing-text">👋 Hi, I'm <span id="typing"></span></h2>
     </div>
 
-    <!-- Dots and Lines Background -->
+    <!-- Background Pattern -->
     <div class="background-pattern">
+        <!-- Dots for subtle decoration -->
         <div class="dots"></div>
+        <!-- Lines for visual aesthetics -->
         <div class="lines"></div>
     </div>
 
+    <!-- Features Section -->
     <div class="features-container">
+        <!-- Data-Driven Storyteller -->
         <div class="feature">
             <div class="icon">📊</div>
             <div class="content">
                 <h3>Data-Driven Storyteller</h3>
-                <p>I specialize in uncovering actionable insights through data visualization, transforming complex numbers into meaningful business strategies.</p>
+                <p>With a strong foundation in Data Analysis and Visualization, I specialize in transforming raw data into actionable insights. 
+                   Using tools like Tableau, Power BI, and Python, I craft compelling narratives that empower decision-makers to drive 
+                   strategic outcomes. I don’t just analyze data; I bring it to life, turning numbers into stories that inspire change.</p>
             </div>
         </div>
-        
+
+        <!-- AI & Machine Learning Enthusiast -->
         <div class="feature">
             <div class="icon">🤖</div>
             <div class="content">
                 <h3>AI & Machine Learning Enthusiast</h3>
-                <p>With expertise in AI/ML, I develop intelligent systems to automate processes and enhance decision-making for businesses.</p>
+                <p>Passionate about leveraging AI and Machine Learning to solve real-world challenges, I’ve developed predictive models, 
+                   automated workflows, and optimized processes to improve efficiency and accuracy. My expertise lies in applying 
+                   algorithms and neural networks to uncover patterns, enabling businesses to make data-driven decisions with confidence.</p>
             </div>
         </div>
 
+        <!-- Global Thinker -->
         <div class="feature">
             <div class="icon">🌍</div>
             <div class="content">
                 <h3>Global Thinker</h3>
-                <p>My diverse academic and professional background helps me approach problems with a global mindset, driving innovative and scalable solutions.</p>
+                <p>As a graduate with a Master of Science in Business Analytics from Northwood University (3.87 GPA), I bring a global 
+                   perspective to every challenge. My academic and professional journey in Data Science, Operations, and Supply Chain 
+                   has equipped me with the skills to solve complex problems across industries, delivering innovative and scalable solutions 
+                   that resonate in an interconnected world.</p>
             </div>
         </div>
 
+        <!-- Results-Oriented Leader -->
         <div class="feature">
             <div class="icon">🎯</div>
             <div class="content">
                 <h3>Results-Oriented Leader</h3>
-                <p>Whether in a team or independently, I focus on achieving tangible results while staying adaptable and collaborative.</p>
+                <p>With a background in Operations and Logistics, I thrive in dynamic environments where problem-solving and 
+                   adaptability are key. Whether leading a team or contributing individually, I remain focused on achieving tangible 
+                   outcomes while fostering collaboration and creativity. My leadership approach is grounded in driving impact 
+                   and ensuring results exceed expectations.</p>
+            </div>
+        </div>
+
+        <!-- Lifelong Learner -->
+        <div class="feature">
+            <div class="icon">📚</div>
+            <div class="content">
+                <h3>Lifelong Learner</h3>
+                <p>I am committed to continuous growth and skill development, constantly exploring the latest advancements in 
+                   Data Analytics, AI, and Visualization. Whether it's learning new technologies or staying updated on industry trends, 
+                   my curiosity drives me to stay ahead of the curve, ensuring I bring innovative solutions to every challenge I face.</p>
             </div>
         </div>
     </div>
 
+    <!-- Call-to-Action Button -->
     <a href="#experience" class="cta-button">🚀 Learn About Me More</a>
 </section>
+
 
 <style>
     /* Dots and Lines Background */
@@ -535,7 +567,7 @@ body {
 
     .dots {
         position: absolute;
-        background-image: radial-gradient(circle, #ffffff 1px, transparent 1px);
+        background-image: radial-gradient(circle, #f3eeee 1px, transparent 1px);
         background-size: 20px 20px;
         width: 100%;
         height: 100%;
@@ -562,7 +594,7 @@ body {
     .feature {
         display: flex;
         align-items: center;
-        background: #ffffff;
+        background: linear-gradient(135deg, #f3cdcd, #f1f5c9);
         border-radius: 15px;
         padding: 20px;
         box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
@@ -577,7 +609,7 @@ body {
     .icon {
         font-size: 3rem;
         margin-right: 20px;
-        color: #00a6ed;
+        color: #7d9708; /* Professional blue color */
     }
 
     .content h3 {
@@ -597,7 +629,7 @@ body {
         display: inline-block;
         margin-top: 30px;
         padding: 10px 20px;
-        background-color: #00a6ed;
+        background-color: #085e83;
         color: white;
         font-weight: bold;
         text-decoration: none;
