--- a/index.html
+++ b/index.html
@@ -473,7 +473,11 @@ body {
     </nav>
   </header>
  
-  <section id="about-me-features" class="about-section">
+ <section id="about" class="about-section">
+    <div class="container">
+      <h2 class="section-title">About Me</h2>
+      <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
+    </div>
     <!-- Profile Section -->
     <div class="profile-container">
         <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
@@ -629,7 +633,7 @@ body {
         display: inline-block;
         margin-top: 30px;
         padding: 10px 20px;
-        background-color: #085e83;
+        background-color: #1695cc;
         color: white;
         font-weight: bold;
         text-decoration: none;
