--- a/index.html
+++ b/index.html
@@ -848,10 +848,32 @@ body {
   </style>
 </section>
 
-<section id="career-highlights" style="padding: 4rem; background: linear-gradient(135deg, #b3c2d4, #a772a4, #cfd9df, #a6c0fe); border-radius: 10px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
-  <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 2rem; color: #1d0202;">CAREER HIGHLIGHTS</h2>
-  <p style="text-align: center; font-size: 1rem; color: #555; margin-bottom: 2rem;">
-    "Welcome to the highlight reel of my career! 🚀 Where data isn’t just numbers—it’s a powerhouse of insights, predictions, and solutions (and sometimes, a bit of magic)."
+<section id="career-highlights" style="padding: 4rem; background: linear-gradient(135deg, #b4cae0, #4a4a72, #2c3e50); border-radius: 10px; box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1); width: 100vw; margin-left: calc(-50vw + 50%);">
+  <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 2rem; color: #f074c0; animation: fadeIn 2s ease-in-out, gradientChange 5s infinite, pulse 2s infinite;">CAREER HIGHLIGHTS</h2>
+
+  <style>
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
+
+    @keyframes gradientChange {
+      0% { color: #a8dadc; }
+      25% { color: #f4a261; }
+      50% { color: #3b2b01; }
+      75% { color: #21ad9d; }
+      100% { color: #264653; }
+    }
+  </style>
+
+  <p style="text-align: center; font-size: 1rem; color: #010c07; margin-bottom: 2rem;">
+    "Welcome to the highlight reel of my career! 🌟 Where data isn’t just numbers—it’s a powerhouse of insights, predictions, and solutions (and sometimes, a bit of magic)."
   </p>
   
   <div class="highlights-container" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem;">
@@ -988,125 +1010,6 @@ body {
     }
   </style>
 </section>
-<section>
-  <style>
-    /* General Styling */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #e9eff6; /* Lighter background for contrast */
-      color: #333;
-    }
-
-    h1, h2 {
-      text-align: center;
-      margin: 20px 0;
-    }
-
-    /* Section Styling */
-    #skills {
-      padding: 60px 0;
-      background-color: #f2f4f8; /* Subtle light gray background */
-    }
-
-    .skills-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-
-    /* Skill Box Styling */
-    .skill-box {
-      background: linear-gradient(135deg, #5c6bc0, #3f51b5); /* New gradient for the skill box */
-      color: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      width: 300px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .skill-box:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-    }
-
-    .skill-icon {
-      font-size: 36px;
-      margin-bottom: 15px;
-    }
-
-    .skill-box h3 {
-      font-size: 20px;
-      margin-bottom: 15px;
-      font-weight: bold;
-    }
-
-    .skill-box ul {
-      list-style: none;
-      padding: 0;
-      font-size: 16px;
-    }
-
-    .skill-box ul li {
-      margin: 5px 0;
-    }
-
-    .skill-box ul li i {
-      margin-right: 8px;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      .skill-box {
-        width: 100%;
-      }
-    }
-
-    /* Gradient and Glow Styles for Interactive Heading */
-    #interactive-heading {
-      font-size: 2.5rem;
-      font-weight: bold;
-      text-align: center;
-      background: linear-gradient(90deg, #ff6b6b, #feca57, #1dd1a1, #5f27cd);
-      -webkit-background-clip: text;
-      background-clip: text; /* Standard property */
-      -webkit-text-fill-color: transparent;
-      background-size: 300% 300%;
-      animation: gradientAnimation 3s linear infinite;
-      transition: text-shadow 0.3s ease, transform 0.3s ease;
-    }
-
-    #interactive-heading:hover {
-      text-shadow: 0 0 15px rgba(255, 255, 255, 0.8);
-      transform: scale(1.05);
-    }
-
-    /* Gradient Animation */
-    @keyframes gradientAnimation {
-      0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
-
-    /* Scrollable Skills Section */
-    #cards-container {
-      height: 400px;
-      overflow-y: auto;
-      padding: 20px;
-      margin-top: 50px;
-    }
-
-  </style>
 
   <section id="skills">
     <section style="padding: 20px; text-align: center;">
