--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@ body {
   </header>
   
   <section id="about-me-features" class="about-section">
+    <!-- About Me content goes here -->
     <div class="container">
       <h2 class="section-title">About Me</h2>
       <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
