--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@ body {
       <h1 style="margin: 0; white-space: nowrap; padding: 30px 60px;">Welcome to My Portfolio Tech Savys!!!!</h1>
     </div>
     <nav>
-      <ul style="list-style: none; margin: 0; padding: 0; display: flex;">
-        <li style="margin-right: 20px;"><a href="#about">About Me</a></li>
+        <ul style="list-style: none; margin: 0; padding: 0; display: flex;">
+        <li style="margin-right: 20px;"><a href="#about-me-features">About Me</a></li>
         <li style="margin-right: 20px;"><a href="#experience">Experience</a></li>
         <li style="margin-right: 20px;"><a href="#skills">Skills</a></li>
         <li style="margin-right: 20px;"><a href="#career-highlights">Career Highlights</a></li>
@@ -436,8 +436,16 @@ body {
     </div>
     <!-- Profile Section -->
     <div class="profile-container">
-        <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
+      <img src=
         <h2 class="typing-text">👋 Hi, I'm <span id="typing"></span></h2>
+    </div>
+
+    <!-- Background Pattern -->
+    <div class="background-pattern">
+        <!-- Dots for subtle decoration -->
+        <div class="dots"></div>
+        <!-- Lines for visual aesthetics -->
+        <div class="lines"></div>
     </div>
 
     <!-- Background Pattern -->
