--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@ body {
       <h2 class="section-title">About Me</h2>
       <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
     </div>
-    <!-- Profile Section -->
+ <!-- Profile Section -->
     <div class="profile-container">
-      <img src=
+        <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
         <h2 class="typing-text">👋 Hi, I'm <span id="typing"></span></h2>
     </div>
 
