--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,16 @@ body {
         </p>
         <a href="https://coursera.org/share/b44a7f4f5bd1ef80b498c6d2a5273366" target="_blank" class="btn">View Certification</a>
       </div>
+      <div class="datacamp-cert-card">
+        <div>
+          <img src="https://www.datacamp.com/logo.png" alt="DataCamp Logo" />
+        </div>
+        <h2>DataCamp Data Analyst Associate</h2>
+        <p>
+          Proud to achieve the <strong>Data Analyst Associate Certificate</strong> from DataCamp! This program emphasizes core data analysis techniques, Python, and SQL for professional analysis.
+        </p>
+        <a href="https://www.datacamp.com/certificate/DAA0012924736719" target="_blank" class="btn">View Certification</a>
+      </div>
     </div>
   </div>
 </section>
@@ -1263,28 +1273,29 @@ body {
 <style>
   .cert-card-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    gap: 20px;
     margin-top: 50px;
   }
 
-  .meta-cert-card {
+  .meta-cert-card, .datacamp-cert-card {
     background: #fff;
     border-radius: 20px;
     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
-    width: 90%;
+    width: 45%;
     max-width: 600px;
     padding: 30px;
     text-align: center;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
 
-  .meta-cert-card:hover {
+  .meta-cert-card:hover, .datacamp-cert-card:hover {
     transform: translateY(-10px);
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.2);
   }
 
-  .meta-cert-card img {
+  .meta-cert-card img, .datacamp-cert-card img {
     max-width: 120px;
     width: 100%;
     height: auto;
@@ -1292,11 +1303,11 @@ body {
     transition: transform 0.3s ease-in-out;
   }
 
-  .meta-cert-card:hover img {
+  .meta-cert-card:hover img, .datacamp-cert-card:hover img {
     transform: scale(1.1);
   }
 
-  .meta-cert-card h2 {
+  .meta-cert-card h2, .datacamp-cert-card h2 {
     font-size: 2rem;
     font-weight: bold;
     color: #333;
@@ -1304,11 +1315,11 @@ body {
     transition: color 0.3s ease-in-out;
   }
 
-  .meta-cert-card:hover h2 {
+  .meta-cert-card:hover h2, .datacamp-cert-card:hover h2 {
     color: #007BFF;
   }
 
-  .meta-cert-card p {
+  .meta-cert-card p, .datacamp-cert-card p {
     font-size: 1.1rem;
     color: #666;
     line-height: 1.5;
@@ -1316,7 +1327,7 @@ body {
     transition: color 0.3s ease-in-out;
   }
 
-  .meta-cert-card:hover p {
+  .meta-cert-card:hover p, .datacamp-cert-card:hover p {
     color: #555;
   }
 
@@ -1341,44 +1352,11 @@ body {
   }
 
   @media (max-width: 768px) {
-    .meta-cert-card {
-      padding: 20px;
-    }
-
-    .meta-cert-card h2 {
-      font-size: 1.6rem;
-    }
-
-    .meta-cert-card p {
-      font-size: 1rem;
-    }
-
-    .btn {
-      font-size: 1rem;
-      padding: 12px 24px;
-    }
-  }
-
-  @media (max-width: 480px) {
-    .meta-cert-card {
-      padding: 15px;
-    }
-
-    .meta-cert-card h2 {
-      font-size: 1.3rem;
-    }
-
-    .meta-cert-card p {
-      font-size: 0.9rem;
-    }
-
-    .btn {
-      font-size: 0.9rem;
-      padding: 10px 20px;
+    .meta-cert-card, .datacamp-cert-card {
+      width: 90%;
     }
   }
 </style>
-
 
     <div class="Certifications-container">
       <section id="datacamp-certifications" style="padding: 50px; background-color: #f9f9f9;">
