--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       line-height: 1.6;
     }
 
-    header {
-      background-color: #112c6e;
-      color: rgb(224, 240, 232);
-      padding: 20px 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: left;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
+header {
+  background-color: #112c6e;
+  color: rgb(224, 240, 232);
+  padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* Changed from left to flex-start */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
     header .logo h1 {
       font-size: 2rem;
