--- a/index.html
+++ b/index.html
@@ -412,28 +412,27 @@ body {
   </style>
 </head>
 <body>
-  <header style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
-    <div class="logo">
-      <h1 style="margin: 0; white-space: nowrap; padding: 30px 60px;">Welcome to My Portfolio Tech Savys!!!!</h1>
-    </div>
-    <nav>
-        <ul style="list-style: none; margin: 0; padding: 0; display: flex;">
-        <li style="margin-right: 20px;"><a href="#about-me-features">About Me</a></li>
-        <li style="margin-right: 20px;"><a href="#experience">Experience</a></li>
-        <li style="margin-right: 20px;"><a href="#skills">Skills</a></li>
-        <li style="margin-right: 20px;"><a href="#career-highlights">Career Highlights</a></li>
-        <li style="margin-right: 20px;"><a href="#certifications">Certifications</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <section id="about-me-features" class="about-section">
-    <!-- About Me content goes here -->
-    <div class="container">
-      <h2 class="section-title">About Me</h2>
-      <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
-    </div>
+  <header style="display: flex; justify-content: space-between; align-items: center; padding: 20px; background-color: #f8f9fa; border-bottom: 1px solid #ddd;">
+  <div class="logo">
+    <h1 style="margin: 0; white-space: nowrap; padding: 0 60px; font-size: 1.5rem;">Welcome to My Portfolio Tech Savys!!!!</h1>
+  </div>
+  <nav>
+    <ul style="list-style: none; margin: 0; padding: 0; display: flex;">
+      <li style="margin-right: 20px;"><a href="#about-me-features" style="text-decoration: none; color: #007bff;">About Me</a></li>
+      <li style="margin-right: 20px;"><a href="#experience" style="text-decoration: none; color: #007bff;">Experience</a></li>
+      <li style="margin-right: 20px;"><a href="#skills" style="text-decoration: none; color: #007bff;">Skills</a></li>
+      <li style="margin-right: 20px;"><a href="#career-highlights" style="text-decoration: none; color: #007bff;">Career Highlights</a></li>
+      <li style="margin-right: 20px;"><a href="#certifications" style="text-decoration: none; color: #007bff;">Certifications</a></li>
+      <li><a href="#contact" style="text-decoration: none; color: #007bff;">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<section id="about-me-features" class="about-section" style="padding: 60px 20px; background-color: #f4f4f4;">
+  <div class="container" style="max-width: 800px; margin: 0 auto; text-align: center;">
+    <h2 class="section-title" style="font-size: 2rem; margin-bottom: 20px;">About Me</h2>
+    <p class="section-intro" style="font-size: 1rem; line-height: 1.6; color: #333;">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
+  </div>
  <!-- Profile Section -->
     <div class="profile-container">
         <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
