--- a/index.html
+++ b/index.html
@@ -11,73 +11,74 @@
       box-sizing: border-box;
     }
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f3d173;
-      color: #0c0a64;
-      line-height: 1.6;
-    }
+   <style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+  }
 
-header {
-  background-color: #112c6e;
-  color: rgb(224, 240, 232);
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start; /* Changed from left to flex-start */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 40px;
+    background-color: #f4f4f4;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+  }
 
-    header .logo h1 {
-      font-size: 2rem;
-      margin-bottom: 5px;
-    }
+  header .logo h1 {
+    margin: 0;
+    white-space: nowrap;
+    font-size: 1.8rem;
+    color: #333;
+  }
 
-    header .logo p {
-      font-size: 1rem;
-      opacity: 0.7;
-    }
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
 
-    header nav ul {
-      list-style: none;
-      display: flex;
-      margin-right: 30px;
-    }
+  nav ul li {
+    margin-right: 20px;
+  }
 
-    header nav ul li {
-      margin-left: 30px;
-      position: relative;
-    }
+  nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
 
-    header nav ul li a {
-      text-decoration: none;
-      color: rgb(242, 247, 243);
-      font-size: 1.1rem;
-      padding: 10px;
-      position: relative;
-      transition: color 0.3s;
-    }
+  nav ul li a:hover {
+    color: #00a6ed;
+  }
 
-    header nav ul li a:hover {
-      color: #85f197;
-    }
+  .about-section {
+    padding: 100px 20px 60px; /* Top padding ensures it doesn't overlap with the sticky header */
+    text-align: center;
+    background: linear-gradient(to bottom right, #a2f8c6, #ebd495);
+    border-radius: 20px;
+    margin: 20px;
+  }
 
-    header nav ul li a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 2px;
-      background-color: #f88322;
-      transform: scaleX(0);
-      transition: transform 0.3s ease-in-out;
-    }
-
-    header nav ul li a:hover::after {
-      transform: scaleX(1);
-    }
-
+  .about-section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  .about-section p {
+    font-size: 1.2rem;
+    color: #555;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 0 auto;
+  }
     section {
       padding: 80px 20px;
       text-align: center;
@@ -412,27 +413,29 @@ body {
   </style>
 </head>
 <body>
-  <header style="display: flex; justify-content: space-between; align-items: center; padding: 20px; background-color: #f8f9fa; border-bottom: 1px solid #ddd;">
-  <div class="logo">
-    <h1 style="margin: 0; white-space: nowrap; padding: 0 60px; font-size: 1.5rem;">Welcome to My Portfolio Tech Savys!!!!</h1>
-  </div>
-  <nav>
-    <ul style="list-style: none; margin: 0; padding: 0; display: flex;">
-      <li style="margin-right: 20px;"><a href="#about-me-features" style="text-decoration: none; color: #007bff;">About Me</a></li>
-      <li style="margin-right: 20px;"><a href="#experience" style="text-decoration: none; color: #007bff;">Experience</a></li>
-      <li style="margin-right: 20px;"><a href="#skills" style="text-decoration: none; color: #007bff;">Skills</a></li>
-      <li style="margin-right: 20px;"><a href="#career-highlights" style="text-decoration: none; color: #007bff;">Career Highlights</a></li>
-      <li style="margin-right: 20px;"><a href="#certifications" style="text-decoration: none; color: #007bff;">Certifications</a></li>
-      <li><a href="#contact" style="text-decoration: none; color: #007bff;">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+  <!-- Header Section -->
+  <header>
+    <div class="logo">
+      <h1>Welcome to My Portfolio Tech Savys!!!!</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#about-me-features">About Me</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#career-highlights">Career Highlights</a></li>
+        <li><a href="#certifications">Certifications</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<section id="about-me-features" class="about-section" style="padding: 60px 20px; background-color: #f4f4f4;">
-  <div class="container" style="max-width: 800px; margin: 0 auto; text-align: center;">
-    <h2 class="section-title" style="font-size: 2rem; margin-bottom: 20px;">About Me</h2>
-    <p class="section-intro" style="font-size: 1rem; line-height: 1.6; color: #333;">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
-  </div>
+  <!-- About Section -->
+  <section id="about-me-features" class="about-section">
+    <div class="container">
+      <h2 class="section-title">About Me</h2>
+      <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
+    </div>
  <!-- Profile Section -->
     <div class="profile-container">
         <img src="harika_image.jpg" alt="Harika Yenuga" class="profile-img">
