--- a/index.html
+++ b/index.html
@@ -276,7 +276,63 @@ body {
   outline: none;
   box-shadow: 0 0 5px rgba(224, 231, 236, 0.8);
 }
+ /* Dots and Lines Background */
+  .background-pattern {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+  }
 
+  .dots {
+    position: absolute;
+    background-image: radial-gradient(circle, rgba(255, 255, 255, 0.3) 1px, transparent 1px);
+    background-size: 30px 30px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    animation: move-dots 10s infinite linear;
+  }
+
+  .lines {
+    position: absolute;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
+    background-size: 50px 50px;
+    width: 100%;
+    height: 100%;
+    opacity: 0.2;
+    animation: move-lines 15s infinite linear;
+  }
+
+  /* Keyframes for animations */
+  @keyframes move-dots {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-200px);
+    }
+  }
+
+  @keyframes move-lines {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-150px);
+    }
+  }
+
+  /* Add some container for content */
+  .container {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    padding: 50px;
+  }
 /* Smooth Scrolling */
 html {
   scroll-behavior: smooth;
@@ -406,6 +462,7 @@ body {
 @media (max-width: 768px) {
   .job-card {
     width: 100%;
+
   }
 }
   </style>
@@ -414,8 +471,13 @@ body {
   <!-- Header Section -->
   <header>
     <div class="logo">
-      <h1>Welcome to My Portfolio Tech Savys!!!!</h1>
-    </div>
+      <div class="background-pattern">
+  <div class="dots"></div>
+  <div class="lines"></div>
+</div>
+  <div class="container">
+  <h1>Welcome to My Portfolio</h1>
+</div>
     <nav>
       <ul>
         <li><a href="#about-me-features">About Me</a></li>
@@ -432,7 +494,8 @@ body {
   <section id="about-me-features" class="about-section">
     <div class="container">
       <h2 class="section-title">About Me</h2>
-      <p class="section-intro">Welcome to my world! Here, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
+      <p class="section-intro">Your journey starts here with a touch of style and elegance
+! Where, you'll discover my journey, passions, and the skills that make me a data-driven storyteller, AI enthusiast, and lifelong learner. Let's dive in!</p>
     </div>
  <!-- Profile Section -->
     <div class="profile-container">
